# SimpleCluster

./: README.md
Client/: .gitignore  Cargo.toml
Client/src/: main.rs
Node/: Cargo.toml
Node/src/: client.rs  main.rs  server.rs
Tonic/: Cargo.toml
Tonic/assets/: portal.html
Tonic/proto/: service.proto
Tonic/src/: server.rs  server_blocking.rs
