[package]
name = "node"
version = "0.1.0"
edition = "2021"
description = "Implementation of nodes working together to achieve something complicated."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
futures = "0.3"

clap = { version = "3.0.0-rc.9", features = ["derive"] }
log = "0.4"

opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
rand = "0.8"

tracing = { version = "0.1" }
tracing-opentelemetry = "0.17"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

tarpc = { version = "0.30", features = ["full"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }

port_scanner = "0.1.5"
port_check = "0.1.5"