[package]
name = "Tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"

winping = "0.10.1"

port_scanner = "0.1.5"
webbrowser = "0.8.2"
evcxr = "0.14.1"

[build-dependencies]
tonic-build = "0.8"